--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
 <p>API Demo:</p>
 
 <ul>
-    <li><a href="/teams-json">GET members from team.json</a></li>
-    <li><a href="/teams/install">create MySQL members TABLE</a></li>
-    <li><a href="/teams">GET members from MySQL</a></li>
+    <li><a href="/myStorage-json">GET members from team.json</a></li>
+    <li><a href="/myStorage/install">create MySQL members TABLE</a></li>
+    <li><a href="/myStorage">GET members from MySQL</a></li>
 </ul>
